syntax = "proto3";

package StudyCards.gRPC;

service CategoryService {

    rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse) {}
    rpc GetCategories(GetCategoriesRequest) returns (GetCategoriesResponse) {}
    rpc SaveCategory(SaveCategoryRequest) returns (SaveCategoryResponse) {}
}

service GroupService{
    rpc GetGroup(GetGroupRequest) returns (GetGroupResponse) {}
    rpc GetGroups(GetGroupsRequest) returns (GetGroupsResponse) {}
}

service StudyCardService{
    rpc GetStudyCards(GetStudyCardsRequest) returns (GetStudyCardsResponse) {}
    rpc SaveStudyCard(SaveStudyCardRequest) returns (SaveStudyCardResponse) {}
      // ValueTask<int> SaveStudyCardAsync(IStudyCard studyCard);
        //ValueTask<IEnumerable<IStudyCard>> GetStudyCardsAsync(long subGroupId);
}

message SaveStudyCardRequest{
    StudyCard card = 1;
}

message SaveStudyCardResponse{
    bool saved = 1;
}

message GetStudyCardsRequest{
    int64 subGroupId = 1;
}

message GetStudyCardsResponse{
    repeated StudyCard cards = 1;
}

message GetGroupRequest{
    int64 id = 1;
    int32 includeLevel = 2;
}

message GetGroupResponse{
    Group group = 1;
}

message GetGroupsRequest{
    int32 includeLevel = 1;
}

message GetGroupsResponse{
    repeated Group groups = 1;
}

message GetCategoryRequest{
    int64 id = 1;
    int32 includeLevel = 2;
}

message GetCategoryResponse{
    Category category = 1;
}

message GetCategoriesRequest{
    int32 includeLevel = 1;
}

message GetCategoriesResponse{
    repeated Category categories = 1;
}

message SaveCategoryRequest{
    Category category = 1;
}

message SaveCategoryResponse{
    bool saved = 1;
}


message Category{
    int64 id = 1;
    string name = 2;
    repeated Group groups = 3;
}

message Group{
    int64 id = 1;
    string name = 2;
    int64 categoryId = 3;
    repeated SubGroup subGroups = 4;
}

message SubGroup{
    int64 id = 1;
    string name = 2;
    int64 groupId = 3;
    repeated StudyCard studyCards = 4;
}

message StudyCard{
    int64 id = 1;
    string question = 2;
    string answer = 3;
    int64 subGroupId = 4;
}